# statichub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: install-scripts.yml  release.yml
cli/: Cargo.toml
cli/src/: auth.rs  client.rs  config.rs  main.rs  upload.rs
docs/: LOCAL_TESTING.md
docs/superpowers/plans/: 2026-05-21-statichub-implementation.md  2026-05-22-github-release-workflow.md  2026-05-22-multi-domain-support.md  2026-05-22-subdomain-normalization.md  2026-05-23-tls-support.md  2026-05-24-single-file-deploy.md  2026-05-25-cli-ai-homepage.md  2026-05-28-auth-disabled-local-start.md  2026-05-28-homepage-editorial-ai.md  2026-06-04-single-markdown-deploy.md  2026-06-07-statichub-service-device-flow.md  task-10-cli-deploy.md  task-11-static-serving.md  task-12-google-oauth-server.md  task-13-google-oauth-cli.md  task-14-authenticated-deploy.md  task-15-project-management.md  task-16-custom-domain.md  task-9-cli-upload.md
docs/superpowers/specs/: 2026-05-21-statichub-design.md  2026-05-22-github-release-workflow-design.md  2026-05-22-multi-domain-support-design.md  2026-05-22-subdomain-normalization-design.md  2026-05-23-tls-support-design.md  2026-05-24-single-file-deploy-design.md  2026-05-25-api-key-management-design.md  2026-05-25-statichub-cli-ai-page-design.md  2026-05-28-auth-disabled-local-start-design.md  2026-05-28-homepage-editorial-ai-design.md  2026-06-04-single-markdown-deploy-design.md  2026-06-07-staticHub-service-device-flow-design.md
scripts/: install.ps1  install.sh
server/: .env  .env.example  Cargo.toml
server/migrations/: 001_initial_schema.sql  002_api_keys.sql  002_domains.sql  003_device_login_sessions.sql
server/src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  test_utils.rs  tls.rs
server/src/api/: apikeys.rs  auth.rs  auth_disabled.rs  deploys.rs  domains.rs  management.rs  mod.rs  projects.rs  serve.rs  upload.rs
server/src/middleware/: auth.rs  host.rs  mod.rs
server/src/models/: api_key.rs  deploy.rs  device_login_session.rs  domain.rs  mod.rs  project.rs  user.rs
server/src/storage/: filesystem.rs  mod.rs  trait_.rs
server/src/tls/: config.rs  dns_solver.rs  manager.rs  mod.rs
server/src/web/: homepage.rs
server/static/home/: home.css  home.js  index.html
server/storage/0lh5w8/deploy-1/: about.html  index.html
server/storage/0lh5w8/deploy-1/assets/: style.css
server/storage/test-config/deploy-1/: test.html
server/storage/test-config/deploy-2/: index.html  version2.html
server/storage/totutk/deploy-1/: index.html
server/storage/vqe7i7/deploy-1/: statichub.yaml
server/tests/: api_test.rs  apikey_tests.rs  auth_tests.rs  auth_tests.rs.bak  authenticated_deploy_tests.rs  domain_tests.rs  management_tests.rs  serve_tests.rs  serve_tests.rs.bak  storage_tests.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs
skills/statichub/: SKILL.md
skills/statichub-ai-deploy/: SKILL.md
skills/statichub-ai-deploy/agents/: openai.yaml
skills/statichub/agents/: openai.yaml
