[workspace]
members = ["cli", "server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.4"
edition = "2021"
authors = ["StaticHub Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
